samples/_failures_safe/1761169734_f933d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e65797df.c: In function ‘main’:
./samples/SAFE/__tmp_e65797df.c:148:23: error: expected ‘;’ at end of input
  148 |                 printf
      |                       ^
      |                       ;
./samples/SAFE/__tmp_e65797df.c:148:17: error: expected declaration or statement at end of input
  148 |                 printf
      |                 ^~~~~~
./samples/SAFE/__tmp_e65797df.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e65797df.c:148:17: error: expected declaration or statement at end of input
